--- a/src/base-tmpl.html
+++ b/src/base-tmpl.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Заголовок</title>
+  <title>OLS</title>
   <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
