--- a/src/ui.html
+++ b/src/ui.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9 col-sm-5 col-xs-12">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptate rerum ipsa id, temporibus placeat repellat aspernatur. Sed odio nisi consectetur placeat maiores eveniet architecto, impedit ut, voluptatibus fugit culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. In corporis, ullam? Ducimus veritatis architecto magnam modi ex minus temporibus expedita, illum saepe enim adipisci ab alias doloremque autem quidem, corporis.
+      </div>
+      <div class="col-md-3 col-sm-5 col-xs-12">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis consectetur voluptatum architecto. Temporibus animi ea pariatur amet perspiciatis porro assumenda, facilis totam ipsam illo mollitia! Provident reiciendis quasi aperiam.
+      </div>
+    </div>
+  </div>
 
   <script src="js/script.min.js"></script>
 </body>
