Немного базовой типограффики

--- a/src/ui.html
+++ b/src/ui.html
@@ -8,15 +8,29 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-9 col-sm-5 col-xs-12">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptate rerum ipsa id, temporibus placeat repellat aspernatur. Sed odio nisi consectetur placeat maiores eveniet architecto, impedit ut, voluptatibus fugit culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. In corporis, ullam? Ducimus veritatis architecto magnam modi ex minus temporibus expedita, illum saepe enim adipisci ab alias doloremque autem quidem, corporis.
-      </div>
-      <div class="col-md-3 col-sm-5 col-xs-12">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis consectetur voluptatum architecto. Temporibus animi ea pariatur amet perspiciatis porro assumenda, facilis totam ipsam illo mollitia! Provident reiciendis quasi aperiam.
-      </div>
-    </div>
+  <div class="container-fluid">
+
+    <h1>Heading 1 level</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem esse repellat libero quisquam deserunt ipsa modi sunt doloremque eaque, at suscipit nesciunt provident quis illo. Impedit, nemo quaerat dolorum eum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum!</p>
+
+    <h2>Heading 2 level</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem esse repellat libero quisquam deserunt ipsa modi sunt doloremque eaque, at suscipit nesciunt provident quis illo. Impedit, nemo quaerat dolorum eum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum!</p>
+
+    <h3>Heading 3 level</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem esse repellat libero quisquam deserunt ipsa modi sunt doloremque eaque, at suscipit nesciunt provident quis illo. Impedit, nemo quaerat dolorum eum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptate molestias quidem labore odio, molestiae nam cupiditate! Ducimus, obcaecati amet tempore laborum voluptate. Distinctio quisquam tenetur, dolorem rem, nulla laborum!</p>
+
+    <h3>List</h3>
+
+    <ul>
+      <li>Lorem ipsum dolor sit amet?</li>
+      <li>Consectetur facere impedit aliquam enim error natus repudiandae consequatur aperiam quasi.</li>
+      <li>Lorem ipsum dolor sit amet?</li>
+      <li>Consectetur facere impedit aliquam enim error natus repudiandae consequatur aperiam quasi.</li>
+    </ul>
+
   </div>
 
   <script src="js/script.min.js"></script>
