--- a/src/ui.html
+++ b/src/ui.html
@@ -33,6 +33,14 @@
 
   </div>
 
+  <div class="container container--small">
+    <h3>Small container</h3>
+    <div class="row">
+      <div class="col-md-6 col-xs12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+      <div class="col-md-6 col-xs12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laboriosam temporibus necessitatibus quidem quis architecto voluptatem eos inventore nemo esse doloremque sapiente assumenda vel impedit odio qui, earum, fugiat dicta.</div>
+    </div>
+  </div>
+
   <script src="js/script.min.js"></script>
 </body>
 </html>
