--- a/src/courses.html
+++ b/src/courses.html
@@ -18,7 +18,7 @@
     <div class="container container--small">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
-          <li class="menu-footer__item"><a href="index.html" class="menu-footer__link">Sky Agency</a></li>
+          <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
           <li class="menu-footer__item"><a href="#" class="menu-footer__link">About</a></li>
           <li class="menu-footer__item"><a href="#" class="menu-footer__link">Manual</a></li>
           <li class="menu-footer__item"><a href="#" class="menu-footer__link">FAQ</a></li>
