--- a/src/courses.html
+++ b/src/courses.html
@@ -9,9 +9,32 @@
 </head>
 <body>
 
-  <div class="container container--small">
-
-
+  <div class="page-header">
+    <header class="header header--transparent">
+      <div class="container container--small">
+        <div class="row">
+          <div class="col-md-6 col-xs-12">
+            <div class="logo logo--dark">Online Learning System</div>
+          </div>
+          <div class="col-md-6 col-xs-12 header__menu">
+            <nav class="menu menu--dark">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a class="menu__link menu__link--active">Courses</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Profile</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Sign out</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <button type="button" class="header__toggle"><span>Menu toggle</span></button>
+      </div>
+    </header>
   </div>
 
   <footer class="footer">
