Доделки по хедеру

--- a/src/courses.html
+++ b/src/courses.html
@@ -14,7 +14,7 @@
       <div class="container container--small">
         <div class="row">
           <div class="col-md-6 col-xs-12">
-            <div class="logo logo--dark">Online Learning System</div>
+            <div class="logo logo--dark">Online <span class="logo__second">Learning System</span></div>
           </div>
           <div class="col-md-6 col-xs-12 header__menu">
             <nav class="menu menu--dark">
@@ -32,7 +32,7 @@
             </nav>
           </div>
         </div>
-        <button type="button" class="header__toggle"><span>Menu toggle</span></button>
+        <button type="button" class="header__toggle header__toggle--dark"><span>Menu toggle</span></button>
       </div>
     </header>
   </div>
