--- a/src/courses.html
+++ b/src/courses.html
@@ -35,6 +35,29 @@
         <button type="button" class="header__toggle header__toggle--dark"><span>Menu toggle</span></button>
       </div>
     </header>
+
+    <div class="container container--small">
+      <div class="user-courses">
+        <div class="row">
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="user-courses__title">Welcome, Joan</div>
+            <div class="progress progress--success">
+              <div class="progress__bar" style="width: 70%">70%</div>
+              <div class="progress__text">16 of 20 courses passed</div>
+            </div>
+            <div class="status-text status-text--danger">2 courses overdue</div>
+            <div class="status-text status-text--warning">1 course not started</div>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-12 mobile-hide">
+            <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+            <a href="#" class="user-courses__link">Show all announcements</a>
+            <div class="notice-text notice-text--success">2 Section added to course <a href="#">Weather forecasts</a>. They are marked as not completed now, please, complete theme asap</div>
+            <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <footer class="footer">
