--- a/src/courses.html
+++ b/src/courses.html
@@ -55,6 +55,14 @@
             <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
           </div>
         </div>
+        <ul class="user-courses__nav">
+          <li class="user-courses__nav-item user-courses__nav-item--active">
+            <a href="#" class="link-with-number">Scheduled courses <span class="link-with-number__value">5</span></a>
+          </li>
+          <li class="user-courses__nav-item">
+            <a href="#" class="link-with-number">Completed courses <span class="link-with-number__value">16</span></a>
+          </li>
+        </ul>
       </div>
     </div>
 
