Немного подогнал под адаптив

--- a/src/courses.html
+++ b/src/courses.html
@@ -57,10 +57,10 @@
         </div>
         <ul class="user-courses__nav">
           <li class="user-courses__nav-item user-courses__nav-item--active">
-            <a href="#" class="link-with-number">Scheduled courses <span class="link-with-number__value">5</span></a>
+            <a href="#" class="link-with-number">Scheduled <span class="mobile-hide">courses</span><span class="link-with-number__value">5</span></a>
           </li>
           <li class="user-courses__nav-item">
-            <a href="#" class="link-with-number">Completed courses <span class="link-with-number__value">16</span></a>
+            <a href="#" class="link-with-number">Completed <span class="mobile-hide">courses</span><span class="link-with-number__value">16</span></a>
           </li>
         </ul>
       </div>
