алерт анонсов с адаптивом

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <div class="container container--small">
     <ul>
       <li><a href="courses.html">Courses</a></li>
+      <li><a href="course.html">Course page</a></li>
     </ul>
   </div>
 
