--- a/src/courses.html
+++ b/src/courses.html
@@ -65,7 +65,57 @@
         </ul>
       </div>
     </div>
+  </div>
 
+  <div class="container container--small">
+    <section class="courses-list">
+      <header class="courses-list__header">
+        <div class="row">
+          <div class="col-md-6 col-sm-7">
+            <h3 class="courses-list__title">Courses</h3>
+          </div>
+          <div class="col-md-2 tablet-hide">
+            <div class="courses-list__sub-title">Instructor(s)</div>
+          </div>
+          <div class="col-md-2 tablet-hide">
+            <div class="courses-list__sub-title">time</div>
+          </div>
+          <div class="col-md-2 col-sm-5">
+            <div class="courses-list__sub-title text-right">progress</div>
+          </div>
+        </div>
+      </header>
+      <div class="course-preview">
+        <div class="row">
+          <div class="col-md-1">
+            <div class="course-preview__image">
+              <img src="img/course-bg-1.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-md-7">
+                <h3 class="course-preview__title">3496 Aviation Weather Forecasts course</h3>
+                <p class="courses-preview__about">Obligatory, every year</p>
+              </div>
+              <div class="col-md-3">
+                Adam Mccarthy,<br>
+                Joan Simpson
+              </div>
+              <div class="col-md-2">
+                9h 20m
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="progress progress--warning">
+              <div class="progress__bar" style="width: 30%">30%</div>
+              <div class="progress__text">3/7 sections, 1/3 tests</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <footer class="footer">
