--- a/src/courses.html
+++ b/src/courses.html
@@ -69,14 +69,14 @@
 
   <div class="container container--small">
     <section class="courses-list">
-      <header class="courses-list__header">
+      <header class="courses-list__header mobile-hide">
         <div class="courses-list__col courses-list__col--1">
           <h3 class="courses-list__title">Courses</h3>
         </div>
-        <div class="courses-list__col courses-list__col--2">
+        <div class="courses-list__col courses-list__col--2 tablet-hide">
           <div class="courses-list__sub-title">Instructor(s)</div>
         </div>
-        <div class="courses-list__col courses-list__col--3">
+        <div class="courses-list__col courses-list__col--3 tablet-hide">
           <div class="courses-list__sub-title">time</div>
         </div>
         <div class="courses-list__col courses-list__col--4">
@@ -94,11 +94,10 @@
             <h3 class="course-preview__title">3496 Aviation Weather Forecasts course</h3>
             <p class="course-preview__about">Obligatory, every year</p>
           </div>
-          <div class="course-preview__col course-preview__col--2-2">
-            Adam Mccarthy,<br>
-            Joan Simpson
+          <div class="course-preview__col course-preview__col--2-2 mobile-hide">
+            Adam Mccarthy, Joan Simpson
           </div>
-          <div class="course-preview__col course-preview__col--2-3">
+          <div class="course-preview__col course-preview__col--2-3 mobile-hide">
             9h 20m
           </div>
         </div>
