--- a/src/courses.html
+++ b/src/courses.html
@@ -83,6 +83,7 @@
           <div class="courses-list__sub-title text-right">progress</div>
         </div>
       </header>
+      <!-- курс -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
           <div class="course-preview__image">
@@ -105,6 +106,87 @@
           <div class="progress progress--warning progress--small">
             <div class="progress__bar" style="width: 30%">30%</div>
             <div class="progress__text">3/7 sections, 1/3 tests</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- курс -->
+      <div class="course-preview">
+        <div class="course-preview__col course-preview__col--1">
+          <div class="course-preview__image">
+            <img src="img/course-bg-1.jpg" alt="">
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--2">
+          <div class="course-preview__col course-preview__col--2-1">
+            <h3 class="course-preview__title">3006 Abbreviations and Symbols course</h3>
+            <p class="course-preview__about">Obligatory, every year</p>
+          </div>
+          <div class="course-preview__col course-preview__col--2-2 mobile-hide">
+            Joan Simpson
+          </div>
+          <div class="course-preview__col course-preview__col--2-3 mobile-hide">
+            5h 30 m
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--3">
+          <div class="progress progress--warning progress--small">
+            <div class="progress__bar" style="width: 30%">30%</div>
+            <div class="progress__text">5/9 sections, 2/3 test</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- курс -->
+      <div class="course-preview">
+        <div class="course-preview__col course-preview__col--1">
+          <div class="course-preview__image">
+            <img src="img/course-bg-2.jpg" alt="">
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--2">
+          <div class="course-preview__col course-preview__col--2-1">
+            <h3 class="course-preview__title">3582 Radio Navigation course</h3>
+            <p class="course-preview__about">Elective, every year <span class="text-success">repeat until 26.03.2017</span></p>
+          </div>
+          <div class="course-preview__col course-preview__col--2-2 mobile-hide">
+            Adam Mccarthy, Joan Simpson
+          </div>
+          <div class="course-preview__col course-preview__col--2-3 mobile-hide">
+            1h 20m
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--3">
+          <div class="progress progress--success progress--small">
+            <div class="progress__bar" style="width: 100%">100%</div>
+            <div class="progress__text">3/3 sections</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- курс -->
+      <div class="course-preview">
+        <div class="course-preview__col course-preview__col--1">
+          <div class="course-preview__image">
+            <img src="img/course-bg-1.jpg" alt="">
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--2">
+          <div class="course-preview__col course-preview__col--2-1">
+            <h3 class="course-preview__title">3247 The Pitot Static System and Associated Instruments  course and Associated</h3>
+            <p class="course-preview__about">Elective, every 2 years <span class="text-danger">repeat until 26.03.2017</span></p>
+          </div>
+          <div class="course-preview__col course-preview__col--2-2 mobile-hide">
+            Adam Mccarthy, Joan Simpson
+          </div>
+          <div class="course-preview__col course-preview__col--2-3 mobile-hide">
+            9h 20m
+          </div>
+        </div>
+        <div class="course-preview__col course-preview__col--3">
+          <div class="progress progress--warning progress--small">
+            <div class="progress__bar" style="width: 0%">0%</div>
+            <div class="progress__text">2/2 section, 2/2 tests</div>
           </div>
         </div>
       </div>
