--- a/src/course.html
+++ b/src/course.html
@@ -124,7 +124,7 @@
               <div class="course-sections__item-time tablet-hide">42 min</div>
               <ul class="course-sections__media-list tablet-hide">
                 <li class="course-sections__media-item">
-                  <a href="" class="course-icon-link course-icon-link--play">
+                  <a href="" class="course-icon-link course-icon-link--play" data-tooltip="Experimental graphical forecats video">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
                   </a>
                 </li>
