Шапка профиля - разметка

--- a/src/profile.html
+++ b/src/profile.html
@@ -35,6 +35,48 @@
     </div>
   </header>
 
+  <section class="profile-view">
+    <div class="container container--small">
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="profile-view__image">
+            <img src="img/student-photo.jpg" alt="">
+          </div>
+          <div class="profile-view__description">
+            <div class="profile-view__status">ATC STAFF <span class="profile-view__id">ID 2345678</span></div>
+            <h1 class="profile-view__name">Max Johnston</h1>
+            <div class="progress progress--success">
+              <div class="progress__bar" style="width: 70%">70%</div>
+              <div class="progress__text">16 of 20 courses passed</div>
+            </div>
+          </div>
+          <p>Additional information, if needed <a href="#" class="btn btn--bordered pull-right">Edit</a></p>
+        </div>
+        <div class="col-md-5 col-sm-12 pull-right">
+          <h2 class="profile-view__title">Statistics</h2>
+          <table>
+            <tr>
+              <td>Sections competed</td>
+              <td>68</td>
+            </tr>
+            <tr>
+              <td>Video watched</td>
+              <td>8h 30m</td>
+            </tr>
+            <tr>
+              <td>Test passed</td>
+              <td>38</td>
+            </tr>
+            <tr>
+              <td>Correct answers</td>
+              <td>157/220 82%</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container container--small">
     <section class="courses-list">
       <header class="courses-list__header mobile-hide">
