--- a/src/profile.html
+++ b/src/profile.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-md-5 col-sm-12 pull-right">
           <h2 class="profile-view__title">Statistics</h2>
-          <table>
+          <table class="profile-view__table">
             <tr>
               <td>Sections competed</td>
               <td>68</td>
@@ -69,7 +69,7 @@
             </tr>
             <tr>
               <td>Correct answers</td>
-              <td>157/220 82%</td>
+              <td>157/220 &nbsp;&nbsp; 82%</td>
             </tr>
           </table>
         </div>
