--- a/src/profile.html
+++ b/src/profile.html
@@ -38,7 +38,7 @@
   <section class="profile-view">
     <div class="container container--small">
       <div class="row">
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-9 col-xs-12">
           <div class="profile-view__image">
             <img src="img/student-photo.jpg" alt="">
           </div>
@@ -50,9 +50,9 @@
               <div class="progress__text">16 of 20 courses passed</div>
             </div>
           </div>
-          <p>Additional information, if needed <a href="#" class="btn btn--bordered pull-right">Edit</a></p>
+          <p class="profile-view__info">Additional information, if needed <a href="#" class="btn btn--bordered pull-right">Edit</a></p>
         </div>
-        <div class="col-md-5 col-sm-12 pull-right">
+        <div class="col-md-5 col-sm-12 col-xs-12 pull-right">
           <h2 class="profile-view__title">Statistics</h2>
           <table class="profile-view__table">
             <tr>
