Заготовка страницы логина

--- a/src/login.html
+++ b/src/login.html
@@ -7,16 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="pattern-page">
 
-  <div class="container container--small">
-    <ul>
-      <li><a href="courses.html">Courses</a></li>
-      <li><a href="course.html">Course page</a></li>
-      <li><a href="profile.html">Profile page</a></li>
-      <li><a href="profile.html">Login page</a></li>
-    </ul>
-  </div>
+  
 
   <script src="js/script.min.js"></script>
 </body>
