Разметка страницы логина

--- a/src/login.html
+++ b/src/login.html
@@ -9,7 +9,36 @@
 </head>
 <body class="pattern-page">
 
-  
+  <div class="page-box">
+    <h1 class="page-box__title">SKY OLS</h1>
+    <div class="page-box__content">
+      <div class="form">
+        <div class="form__title">Authentification</div>
+        <div class="form__error">Incorrect Email or Password</div>
+        <form action="" method="">
+          <div class="form__row">
+            <label for="mail" class="form__label">mail</label>
+            <input type="email" id="mail">
+          </div>
+          <div class="form__row">
+            <label for="pass" class="form__label" >mail</label>
+            <input type="password" id="pass">
+          </div>
+          <div class="form__row">
+            <input type="checkbox" id="remember">
+            <label for="remember" class="form__checkbox">Remember me</label>
+          </div>
+          <div class="form__row">
+            <button type="submit" class="btn btn--submit">Log in</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="page-box__links">
+      <a href="#" class="page-box__link">Forgot password</a>
+      <a href="#" class="page-box__link">Request access</a>
+    </div>
+  </div>
 
   <script src="js/script.min.js"></script>
 </body>
