--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <li><a href="courses.html">Courses</a></li>
       <li><a href="course.html">Course page</a></li>
       <li><a href="profile.html">Profile page</a></li>
-      <li><a href="profile.html">Login page</a></li>
+      <li><a href="login.html">Login page</a></li>
     </ul>
   </div>
 
