Форма входа + адаптив

--- a/src/login.html
+++ b/src/login.html
@@ -21,12 +21,12 @@
             <input type="email" id="mail">
           </div>
           <div class="form__row">
-            <label for="pass" class="form__label" >mail</label>
+            <label for="pass" class="form__label" >pass</label>
             <input type="password" id="pass">
           </div>
-          <div class="form__row">
+          <div class="form__row checkbox">
             <input type="checkbox" id="remember">
-            <label for="remember" class="form__checkbox">Remember me</label>
+            <label for="remember" class="checkbox__label">Remember me</label>
           </div>
           <div class="form__row">
             <button type="submit" class="btn btn--submit">Log in</button>
