--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <li><a href="course.html">Course page</a></li>
       <li><a href="profile.html">Profile page</a></li>
       <li><a href="login.html">Login page</a></li>
+      <li><a href="restore.html">Restore page</a></li>
     </ul>
   </div>
 
