Натяжки на картинки

--- a/src/courses.html
+++ b/src/courses.html
@@ -86,7 +86,7 @@
       <!-- курс -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <div class="course-preview__image course-preview__image--success">
             <img src="img/course-bg-1.jpg" alt="">
           </div>
         </div>
@@ -113,7 +113,7 @@
       <!-- курс -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <div class="course-preview__image course-preview__image--danger">
             <img src="img/course-bg-1.jpg" alt="">
           </div>
         </div>
