Подготовка для JS

--- a/src/course.html
+++ b/src/course.html
@@ -56,7 +56,7 @@
               <div class="course-base__descr">
                 <p>We developed a wide range of training courses for the aviation community which enable meteorological observers to meet International Civil Aviation Organization (ICAO) requirements teach international best-practice techniques in forecasting and observing and review the latest developments in aeronautical meteorology help you to better understand and interpret meteorological information, and the impacts of weather on your activities</p>
               </div>
-              <a class="course-base__descr-show btn btn--show-all">Show description</a>
+              <a class="course-base__descr-show btn btn--show-all js-button-more" data-target="course-base__descr">Show description</a>
               <div class="course-base__brief row">
                 <div class="course-base__total col-md-7 col-sm-7">
                   <p class="course-base__total-text">10 sections, 6 tests, 5 hrs 46 min total</p>
