добавлю контур для блока course-brief

--- a/src/course.html
+++ b/src/course.html
@@ -267,7 +267,7 @@
                   </div>
                   <form class="forum__comment-answer">
                     <textarea name="" id="" rows="3"></textarea>
-                    <input type="submit" name="" id="" value="Submit" class="btn btn--forum btn--submit">
+                    <input type="submit" name="" id="" value="Submit" class="btn btn--forum btn--forum-submit">
                   </form>
                 </div>
               </div>
