--- a/src/course.html
+++ b/src/course.html
@@ -98,20 +98,20 @@
 
         <ul class="course-info__nav">
           <li class="course-info__nav-item course-info__nav-item--active">
-            <a href="#" class="course-info__nav-link">Sections</a>
+            <a href="#" class="course-info__nav-link js-tab-control" data-target="course-sections">Sections</a>
           </li>
           <li class="course-info__nav-item">
-            <a href="#" class="course-info__nav-link">Forum <span class="forum-counter">12</span></a>
+            <a href="#" class="course-info__nav-link js-tab-control" data-target="forum">Forum <span class="forum-counter">12</span></a>
           </li>
         </ul>
 
   		</div>
   	</div>
 
-    <div class="course-info">
+    <div class="course-info js-tab-container">
       <div class="container container--small">
 
-        <div class="course-sections">
+        <div class="course-sections js-tab js-tab--active">
 
           <div class="course-sections__item-wrap course-sections__item-wrap--passed">
             <div class="course-sections__item">
@@ -213,7 +213,7 @@
 
         </div>
 
-        <div class="forum">
+        <div class="forum js-tab">
           <p class="forum__title">Forum</p>
           <div class="forum__messages">
 
