--- a/src/course.html
+++ b/src/course.html
@@ -266,8 +266,8 @@
                     <span class="forum__comment-date">will be published after instructor’s review</span>
                   </div>
                   <form class="forum__comment-answer">
-                    <textarea name="" rows="3"></textarea>
-                    <button type="submit" name="" class="btn btn--forum btn--submit">Submit</button>
+                    <textarea name="answer" rows="3"></textarea>
+                    <button type="submit" class="btn btn--forum btn--submit">Submit</button>
                   </form>
                 </div>
               </div>
