--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,7 @@
       <div class="form">
         <div class="form__title">Authentification</div>
         <div class="form__error">Incorrect Email or Password</div>
-        <form action="" method="">
+        <form action="/echo" method="POST">
           <div class="form__row">
             <label for="mail" class="form__label">mail</label>
             <input type="email" id="mail">
