--- a/src/profile.html
+++ b/src/profile.html
@@ -44,7 +44,7 @@
           </div>
           <div class="profile-view__description">
             <div class="profile-view__status">ATC STAFF <span class="profile-view__id">ID 2345678</span></div>
-            <h1 class="profile-view__name">Max Johnston</h1>
+            <div class="profile-view__name">Max Johnston</div>
             <div class="progress progress--success">
               <div class="progress__bar" style="width: 70%">70%</div>
               <div class="progress__text">16 of 20 courses passed</div>
