--- a/src/restore.html
+++ b/src/restore.html
@@ -14,7 +14,7 @@
     <div class="page-box__content">
       <div class="form">
         <div class="form__title">Restore password</div>
-        <form action="" method="">
+        <form action="/echo" method="POST">
           <div class="form__row">
             <label for="mail" class="form__label">mail</label>
             <input type="email" id="mail">
