Подобрал UI кит

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <li><a href="profile.html">Profile page</a></li>
       <li><a href="login.html">Login page</a></li>
       <li><a href="restore.html">Restore page</a></li>
+      <li><a href="ui.html">UI Kit</a></li>
     </ul>
   </div>
 
