--- a/src/ui.html
+++ b/src/ui.html
@@ -42,6 +42,103 @@
     </div>
   </div>
 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>Кнопки</h3>
+        <a href="#" class="btn btn--bordered">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--submit">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--show-all">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--forum">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--reply">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--publish">Кнопка</a> <br><br>
+        <a href="#" class="btn btn--forum-submit">Кнопка</a>
+      </div>
+      <div class="col-md-3">
+        <h3>Алерт с анонсом</h3>
+        <div class="announce-alert">
+          <div class="announce-alert__thumb mobile-hide">
+            <img src="img/student-photo-thumb.jpg" alt="">
+          </div>
+          <div class="announce-alert__text">2 Section added and 2 tests. Please, complete sections and tests <span class="announce-alert__date">24.02 2016</span></div>
+          <a href="#" class="btn btn--show-all announce-alert__link">Show all announcements</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Прогресс бары</h3>
+        <div class="progress progress--success">
+          <div class="progress__bar" style="width: 70%">70%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <div class="progress progress--warning">
+          <div class="progress__bar" style="width: 40%">40%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <div class="progress progress--danger">
+          <div class="progress__bar" style="width: 30%">30%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <div class="progress progress--small progress--success">
+          <div class="progress__bar" style="width: 70%">70%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <br>
+        <div class="progress progress--small progress--warning">
+          <div class="progress__bar" style="width: 40%">40%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <br>
+        <div class="progress progress--small progress--danger">
+          <div class="progress__bar" style="width: 30%">30%</div>
+          <div class="progress__text">16 of 20 courses passed</div>
+        </div>
+        <br>
+        <div class="progress progress--dark progress--warning">
+          <div class="progress__bar" style="width: 80%"></div>
+          <div class="progress__text">10 of 16 sections</div>
+        </div>
+        <div class="progress progress--dark progress--success">
+          <div class="progress__bar" style="width: 80%"></div>
+          <div class="progress__text">10 of 16 sections</div>
+        </div>
+        <div class="progress progress--dark progress--danger">
+          <div class="progress__bar" style="width: 80%"></div>
+          <div class="progress__text">10 of 16 sections</div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <h3>Текст со статусом</h3>
+        <div class="status-text status-text--danger">2 courses overdue</div>
+        <div class="status-text status-text--warning">1 course not started</div>
+        <div class="status-text status-text--success">0 course not started</div>
+      </div>
+      <div class="col-md-3">
+        <h3>Нотификации</h3>
+        <div class="notice-text notice-text--success">2 Section added to course <a href="#">Weather forecasts</a>. They are marked as not completed now, please, complete theme asap</div>
+        <div class="notice-text notice-text--warning">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, cum sed tempore ducimus! Ipsa qui consequatur non cumque assumenda labore optio commodi enim ea, debitis aliquid, et. Inventore culpa, iste.</div>
+        <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+      </div>
+      <div class="col-md-3">
+        <h3>Ссылка с количеством</h3>
+        <a href="#" class="link-with-number">Scheduled <span class="mobile-hide">courses</span><span class="link-with-number__value">5</span></a>
+      </div>
+      <div class="col-md-3">
+        <h3>Навигация - табы</h3>
+        <ul class="user-courses__nav">
+          <li class="user-courses__nav-item user-courses__nav-item--active">
+            <a href="#" class="link-with-number">Scheduled <span class="mobile-hide">courses</span><span class="link-with-number__value">5</span></a>
+          </li>
+          <li class="user-courses__nav-item">
+            <a href="#" class="link-with-number">Completed <span class="mobile-hide">courses</span><span class="link-with-number__value">16</span></a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
   <script src="js/script.min.js"></script>
 </body>
 </html>
