--- a/src/courses.html
+++ b/src/courses.html
@@ -23,7 +23,7 @@
                   <a class="menu__link menu__link--active">Courses</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Profile</a>
+                  <a href="profile.html" class="menu__link">Profile</a>
                 </li>
                 <li class="menu__item">
                   <a href="#" class="menu__link">Sign out</a>
