--- a/src/login.html
+++ b/src/login.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="page-box__links">
-      <a href="#" class="page-box__link">Forgot password</a>
+      <a href="restore.html" class="page-box__link">Forgot password</a>
       <a href="#" class="page-box__link">Request access</a>
     </div>
   </div>
