--- a/src/profile.html
+++ b/src/profile.html
@@ -19,10 +19,10 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a class="menu__link menu__link--active">Courses</a>
+                <a href="courses.html" class="menu__link">Courses</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Profile</a>
+                <a class="menu__link menu__link--active">Profile</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Sign out</a>
