--- a/src/restore.html
+++ b/src/restore.html
@@ -23,7 +23,7 @@
             <button type="submit" class="btn btn--submit">Log in</button>
           </div>
           <div class="form__row">
-            <a href="#" class="form__link">Log in</a>
+            <a href="login.html" class="form__link">Log in</a>
           </div>
         </form>
       </div>
