добавлена шапка с навигацией по курсу (с адаптивом)

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="course.html">Course page</a></li>
+      <li><a href="course-section.html">Course section</a></li>
       <li><a href="profile.html">Profile page</a></li>
       <li><a href="login.html">Login page</a></li>
       <li><a href="restore.html">Restore page</a></li>
