шапка на странице course section вынесена в компонент - section-head

--- a/src/course-section.html
+++ b/src/course-section.html
@@ -37,26 +37,26 @@
 
   <div class="course-section">
 
-    <div class="course-section__head">
+    <div class="section-head">
       <div class="container container--small">
-        <p class="course-section__head-title">3496 Aviation Weather Forecasts course (5/11 completed)</p>
-        <div class="course-section__head-links">
+        <p class="section-head__title">3496 Aviation Weather Forecasts course (5/11 completed)</p>
+        <div class="section-head__links">
 
-          <a href="" class="course-section__head-back btn btn--icon btn--back">
+          <a href="" class="section-head__back btn btn--icon btn--back">
             <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             <span class="btn-text">Back to course</span>
           </a>
 
-          <div class="course-section__head-btns">
+          <div class="section-head__btns">
             <a href="" class="course-section__head-arrow btn btn--arrow"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
 
-            <a href="" class="course-section__head-next btn btn--icon btn--next">
+            <a href="" class="section-head__next btn btn--icon btn--next">
               <span class="btn-text">Next section</span>
               <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             </a>
           </div>
 
-          <div class="course-section__head-progress section-progress">
+          <div class="section-head__progress section-progress">
             <a href="" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
@@ -101,19 +101,21 @@
 
       <section class="course-section__body">
         <h1 class="course-section__title">
-          <span class="course-section__title-icon svg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg></span>
-          Section 4 - Experimental Grapical Forecasts
+          <span class="course-section__title-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg></span>
+          <span class="course-section__title-text">Section 4 - Experimental Grapical Forecasts</span>
         </h1>
 
         <div class="row">
 
-          <div class="col-md-8">
-            
+          <div class=" col-sm-12 col-md-8">
+            <div class="section-content">
+              
+            </div>
           </div>
 
-          <div class="col-md-4">
-            <aside class="course-section__aside">
-              <div class="materials">
+          <div class="col-sm-12 col-md-4">
+            <aside class="course-section__aside row">
+              <div class="materials col-xs-12 col-sm-6 col-md-12">
                 <p class="materials__title">Files</p>
                 <ul class="materials__list">
                   <li class="materials__list-item"><a href="" class="materials__link">
@@ -134,7 +136,7 @@
                 </a>
               </div>
 
-              <div class="materials">
+              <div class="materials col-xs-12 col-sm-6 col-md-12">
                 <p class="materials__title">Videos</p>
                 <ul class="materials__list">
                   <li class="materials__list-item"><a href="" class="materials__link">
