добавлена страница содержания секции курса с адаптивом, без полного оформления блока с видео

--- a/src/course.html
+++ b/src/course.html
@@ -263,7 +263,10 @@
                 <div class="forum__comment">
                   <div class="forum__comment-head">
                     <span class="forum__comment-author">Your answer</span>
-                    <span class="forum__comment-date">will be published after instructor’s review</span>
+                    <p class="forum__comment-date">
+                      <span class="forum__draft-icon"><svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25.259 17.446"><path d="M9.713 8.723c0-.777.29-1.458.874-2.042s1.265-.874 2.042-.874L9.713 8.723zm-.873.874c-.097-.29-.097-.584-.097-.874a3.896 3.896 0 0 1 3.886-3.886c.29 0 .584 0 .874.097l2.621-2.621c-1.067-.29-2.235-.391-3.5-.391C3.886 1.92 0 8.723 0 8.723s1.555 2.718 4.953 4.76L8.84 9.597zm6.706-.874l-2.916 2.916c.777 0 1.458-.29 2.042-.874.579-.584.874-1.265.874-2.042zm4.76-4.76L16.42 7.849c.097.29.097.584.097.874a3.896 3.896 0 0 1-3.886 3.886c-.29 0-.584 0-.874-.097l-2.621 2.621c1.067.29 2.235.386 3.495.386 8.743 0 12.629-6.802 12.629-6.802s-1.556-2.712-4.954-4.754zM20.392 0L3.907 16.485l.96.96L21.357.955 20.392 0z" fill="#fff"/></svg></span>
+                    will be published after instructor’s review
+                    </p>
                   </div>
                   <form class="forum__comment-answer">
                     <textarea name="" id="" rows="3"></textarea>
