--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
       <li><a href="login.html">Login page</a></li>
       <li><a href="restore.html">Restore page</a></li>
       <li><a href="ui.html">UI Kit</a></li>
+      <li>EXTRA</li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </div>
 
