Заготовка для helpo

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <li><a href="ui.html">UI Kit</a></li>
       <li>EXTRA</li>
       <li><a href="about.html">About</a></li>
+      <li><a href="help.html">Help</a></li>
     </ul>
   </div>
 
