JS для страницы помощи

--- a/src/help.html
+++ b/src/help.html
@@ -46,8 +46,8 @@
     <div class="row">
       <div class="col-md-7 col-sm-12 col-xs-12">
         <article class="collapse">
-          <header class="collapse__header js-collapse">
-            <button type="button" class="collapse__btn" data-text="collapse">expand <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 11.568 8.097"><path d="M5.366 7.887a.523.523 0 0 0 .838 0l5.26-7.048a.527.527 0 0 0-.105-.733.527.527 0 0 0-.733.105l-4.841 6.49L.944.211C.769-.024.447-.068.211.106S-.068.603.106.839l5.26 7.048z" fill="#78909c"/></svg></button>
+          <header class="collapse__header">
+            <button type="button" class="collapse__btn js-collapse" data-text="collapse"><span class="js-collapse-text">expand</span> <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 11.568 8.097"><path d="M5.366 7.887a.523.523 0 0 0 .838 0l5.26-7.048a.527.527 0 0 0-.105-.733.527.527 0 0 0-.733.105l-4.841 6.49L.944.211C.769-.024.447-.068.211.106S-.068.603.106.839l5.26 7.048z" fill="#78909c"/></svg></button>
             <h2 class="collapse__title">Working with instructor and administrators</h2>
           </header>
           <div class="collapse__content">
@@ -57,8 +57,8 @@
         </article>
 
         <article class="collapse">
-          <header class="collapse__header js-collapse">
-            <button type="button" class="collapse__btn" data-text="collapse">expand <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 11.568 8.097"><path d="M5.366 7.887a.523.523 0 0 0 .838 0l5.26-7.048a.527.527 0 0 0-.105-.733.527.527 0 0 0-.733.105l-4.841 6.49L.944.211C.769-.024.447-.068.211.106S-.068.603.106.839l5.26 7.048z" fill="#78909c"/></svg></button>
+          <header class="collapse__header">
+            <button type="button" class="collapse__btn js-collapse" data-text="collapse"><span class="js-collapse-text">expand</span> <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 11.568 8.097"><path d="M5.366 7.887a.523.523 0 0 0 .838 0l5.26-7.048a.527.527 0 0 0-.105-.733.527.527 0 0 0-.733.105l-4.841 6.49L.944.211C.769-.024.447-.068.211.106S-.068.603.106.839l5.26 7.048z" fill="#78909c"/></svg></button>
             <h2 class="collapse__title">Starting course</h2>
           </header>
           <div class="collapse__content">
