--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <li>EXTRA</li>
       <li><a href="about.html">About</a></li>
       <li><a href="help.html">Help</a></li>
+      <li><a href="messages.html">Messages</a></li>
     </ul>
   </div>
 
